# zhihu-profiler

./: .gitignore  .public_url  .zhihu_cookies  README.md  pyproject.toml  requirements.txt  run.sh  start_web.sh
examples/: basic_usage.py
tests/: __init__.py
zhihu_profiler/: __init__.py  cli.py
zhihu_profiler/analysis/: concrete.py  evolution.py  interests.py  personality.py  professional.py  profiler.py  style.py  timeline.py  values.py
zhihu_profiler/nlp/: preprocessing.py  sentiment.py
zhihu_profiler/scraper/: models.py  zhihu.py
zhihu_profiler/viz/: dashboard.py
zhihu_profiler/web/: server.py
zhihu_profiler/web/static/: index.html
