[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihu-profiler"
version = "0.1.0"
description = "Deep personality profiling through Zhihu answer analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["zhihu", "nlp", "personality-analysis", "profiling", "chinese-nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Sociology",
]
requires-python = ">=3.9"

dependencies = [
    "playwright>=1.40",
    "jieba>=0.42",
    "snownlp>=0.12",
    "wordcloud>=1.9",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.25",
    "lxml>=4.9",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
deep = [
    "transformers>=4.35",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
zhihu-profiler = "zhihu_profiler.cli:main"
zhihu-profiler-analyze = "zhihu_profiler.cli:analyze"

[project.urls]
Homepage = "https://github.com/yourname/zhihu-profiler"
Documentation = "https://github.com/yourname/zhihu-profiler#readme"
Repository = "https://github.com/yourname/zhihu-profiler"

[tool.setuptools.packages.find]
include = ["zhihu_profiler*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
